--- a/emacs.d/config.org
+++ b/emacs.d/config.org
@@ -13,39 +13,7 @@
 ** sanity
 #+begin_src emacs-lisp
 (setq frame-pnhibit-implied-resize t)
-(setq initial-major-mode 'fundamental-mode)
-
-(setq ansi-color-for-comint-mode t)
-;; Don't resize windows & frames in steps;
-(setq window-resize-pixelwise t
-      frame-resize-pixelwise t)
-
-;; Favor vertical splits over horizontal ones
-(setq split-width-threshold 160
-      split-height-threshold nil)
-
-;; Show current keystrokes in minibuffer
-(setq echo-keystrokes 0.02)
-
-(global-auto-revert-mode t)
-
-(defalias 'yes-or-no-p 'y-or-n-p)
-(setq frame-title-format '("Emacs")
-      ring-bell-function 'ignore
-      frame-resize-pixelwise t
-      default-directory "~/"
-      use-dialog-box nil
-      vc-follow-symlinks t              ;; don't ask for confirmation when operating symlinked files
-      inhibit-compacting-font-caches t  ;;  don't compact font caches during GC
-      find-file-visit-truename t)       ;; display true names for symlink files
-(tool-bar-mode -1)
-(menu-bar-mode -1)
-
-;; better scrolling
-(setq scroll-margin 10
-      scroll-step 1
-      next-line-add-newlines nil
-      scroll-conservatively 10000
+(setq initial-major-mode 'fundamental-my 10000
       scroll-preserve-screen-position t
       auto-window-vscroll nil)
 
@@ -243,8 +211,7 @@ Show native line numbers if possible, otherwise use ~linum~.
 (use-package all-the-icons-dired
   :after all-the-icons
   :diminish
-  :hook (dired-mode . all-the-icons-dired-mode)
-  )
+  :hook (dired-mode . all-the-icons-dired-mode))
 #+end_src
 ** centaur-tabs
 #+begin_src emacs-lisp
@@ -321,10 +288,7 @@ Show native line numbers if possible, otherwise use ~linum~.
 #+END_SRC
 ** editorconfig
 #+BEGIN_SRC emacs-lisp
-(use-package editorconfig
-  :config
-  (editorconfig-mode 1)
-  )
+(use-package editorconfig :config (editorconfig-mode 1))
 #+END_SRC
 ** evil + evil-escape + evil-collection
 #+begin_src emacs-lisp
@@ -452,7 +416,11 @@ Show native line numbers if possible, otherwise use ~linum~.
 (use-package go-mode
   :config
   (setq gofmt-command "goimports")
-  (add-hook 'before-save-hook #'gofmt-before-save))
+  :hook
+  ((before-save . lsp-format-buffer)
+   (before-save . lsp-organize-imports))
+  ;; (add-hook 'before-save-hook #'gofmt-before-save)
+  )
 #+end_src
 ** emmet-mode
 #+begin_src emacs-lisp
@@ -837,11 +805,7 @@ Documentation popups for company
   :ensure t
   :init (global-flycheck-mode)
   :config
-    (flycheck-add-mode 'javascript-eslint 'js-mode)
-  :custom
-    (flycheck-check-syntax-automatically '(save mode-enable))
-    (flycheck-idle-change-delay 4)
-    (flycheck-dispaly-errors-delay .3))
+  (flycheck-add-mode 'javascript-eslint 'js-mode))
 #+end_src
 ** lsp-mode + lsp-ui + company-lsp + lsp-ivy
 #+begin_src emacs-lisp
@@ -862,14 +826,21 @@ Documentation popups for company
   :custom
   (lsp-go-use-placeholders t)
   :config
+  (setq-default lsp-go-link-target "pkg.go.dev"
+                lsp-go-use-placeholders t
+                lsp-eldoc-render-all nil
+                lsp-signature-doc-lines 20)
+  (setq lsp-enable-file-watchers nil)
+  (setq lsp-log-io nil)
+  (setq lsp-prefer-flymake nil)
   (setq lsp-clients-typescript-server "typescript-language-server"
         lsp-clients-typescript-server-args '("--stdio")
         lsp-clients-typescript-javascript-server "typescript-language-server"
         lsp-clients-typescript-javascript-args '("--stdio"))
-  (lsp-register-client
-   (make-lsp-client :new-connection (lsp-stdio-connection '("terraform-ls" "serve"))
-                    :major-modes '(terraform-mode)
-                    :server-id 'terraform-ls))
+  ;; (lsp-register-client
+  ;;  (make-lsp-client :new-connection (lsp-stdio-connection '("terraform-ls" "serve"))
+  ;;                   :major-modes '(terraform-mode)
+  ;;                   :server-id 'terraform-ls))
   (lsp-register-custom-settings
    '(("gopls.experimentalWorkspaceModule" t t)
      ("gopls.usePlaceholders" lsp-go-use-placeholders t)
@@ -881,30 +852,32 @@ Documentation popups for company
   :commands (lsp lsp-deferred)
   )
 
-(use-package lsp-ui
-  :commands lsp-ui-mode
-  :custom
-  (lsp-ui-doc-enable t)
-  (lsp-ui-doc-header t)
-  (lsp-ui-doc-border (face-foreground 'default))
-  (lsp-ui-doc-include-signature t)
-  (lsp-ui-doc-max-width 150)
-  (lsp-ui-doc-max-height 30)
-  (lsp-ui-doc-position 'at-point)
-  (lsp-ui-doc-use-childframe t)
-  (lsp-ui-doc-use-webkit t)
-  (lsp-ui-doc-alignment 'window)
-  (lsp-ui-peek-enable t)
-  (lsp-ui-peek-peek-height 20)
-  (lsp-ui-peek-list-width 50)
-  (lsp-ui-peek-fontify 'on-demand)
-  ;; :bind
-  ;; (:map lsp-mode-map
-  ;;       ("C-c C-r" . lsp-ui-peek-find-references)
-  ;;       ("C-c C-d" . lsp-ui-peek-find-definitions)
-  ;;       ("C-c m" . lsp-ui-imenu)
-  ;;       ("C-c s" . lsp-ui-sideline-mode))
-  )
+;; (use-package lsp-ui
+;;   :commands lsp-ui-mode
+;;   :custom
+;;   (lsp-ui-doc-enable t)
+;;   (lsp-ui-doc-header t)
+;;   (lsp-ui-doc-border (face-foreground 'default))
+;;   (lsp-ui-doc-include-signature t)
+;;   (lsp-ui-doc-max-width 150)
+;;   (lsp-ui-doc-max-height 30)
+;;   (lsp-ui-doc-position 'at-point)
+;;   (lsp-ui-doc-use-childframe t)
+;;   (lsp-ui-doc-use-webkit t)
+;;   (lsp-ui-doc-alignment 'window)
+;;   (lsp-ui-peek-enable t)
+;;   (lsp-ui-peek-peek-height 20)
+;;   (lsp-ui-peek-list-width 50)
+;;   (lsp-ui-peek-fontify 'on-demand)
+;;   ;; :bind
+;;   ;; (:map lsp-mode-map
+;;   ;;       ("C-c C-r" . lsp-ui-peek-find-references)
+;;   ;;       ("C-c C-d" . lsp-ui-peek-find-definitions)
+;;   ;;       ("C-c m" . lsp-ui-imenu)
+;;   ;;       ("C-c s" . lsp-ui-sideline-mode))
+;;   )
+
+(use-package lsp-ui)
 
 (use-package lsp-ivy :after lsp-mode :commands lsp-ivy-workspace-symbol)
 #+end_src
@@ -1222,8 +1195,7 @@ To preview hex colors
         doom-themes-treemacs-theme "doom-colors")
   ;; (doom-themes-treemacs-config)
   ;; (doom-themes-org-config)
-(load-theme 'doom-one t)
-  )
+  (load-theme 'doom-ayu-mirage t))
 #+end_src
 ** kaolin-themes
 #+begin_src emacs-lisp
@@ -1233,7 +1205,7 @@ To preview hex colors
 #+end_src
 ** sublime-themes
 #+begin_src emacs-lisp
-(use-package sublime-themes :defer t)
+(use-package sublime-themes)
 #+end_src
 ** avk-emacs-theme
 #+begin_src emacs-lisp
